refactor(redis): 优化列表创建和文件读取方式
- 将 List.of() 替换为 Collections.singletonList() 以提高性能
- 使用 Collections.singletonList() 替代 List.of() 创建单元素列表
- 修改文件读取方式从 readString 改为 lines().collect(Collectors.joining())
- 添加必要的 Collections 和 Collectors 导入
- 保持功能不变但优化内存使用和代码效率